i made some changes

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -56,7 +56,7 @@ h4 {
 
 .btn-primary:hover {
   color: #000;
-  background-color: rgb(240, 165, 81);
+  background-color:pink;
   border-color: rgb(240, 165, 81);
 }
 
